--- a/SourceCodes/VirusBusters/VirusBusters/VirusBusters.csproj
+++ b/SourceCodes/VirusBusters/VirusBusters/VirusBusters.csproj
@@ -138,6 +138,7 @@
     <Content Include="appointment_history.aspx" />
     <Content Include="appointment_manage.aspx" />
     <Content Include="appointment_new.aspx" />
+    <Content Include="article_details.aspx" />
     <Content Include="login.aspx" />
     <Content Include="map.aspx" />
     <Content Include="packages.config" />
@@ -152,7 +153,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="posts.aspx" />
+    <Content Include="articles.aspx" />
     <Content Include="Scripts\firebase-debug.js" />
     <Content Include="Scripts\firebase.js" />
     <Content Include="test.aspx" />
@@ -183,6 +184,13 @@
     <Compile Include="appointment_new.aspx.designer.cs">
       <DependentUpon>appointment_new.aspx</DependentUpon>
     </Compile>
+    <Compile Include="article_details.aspx.cs">
+      <DependentUpon>article_details.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="article_details.aspx.designer.cs">
+      <DependentUpon>article_details.aspx</DependentUpon>
+    </Compile>
     <Compile Include="login.aspx.cs">
       <DependentUpon>login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -197,12 +205,12 @@
     <Compile Include="map.aspx.designer.cs">
       <DependentUpon>map.aspx</DependentUpon>
     </Compile>
-    <Compile Include="posts.aspx.cs">
-      <DependentUpon>posts.aspx</DependentUpon>
+    <Compile Include="articles.aspx.cs">
+      <DependentUpon>articles.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="posts.aspx.designer.cs">
-      <DependentUpon>posts.aspx</DependentUpon>
+    <Compile Include="articles.aspx.designer.cs">
+      <DependentUpon>articles.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="default.aspx.cs">
