--- a/SourceCodes/VirusBusters/VirusBusters/VirusBusters.csproj
+++ b/SourceCodes/VirusBusters/VirusBusters/VirusBusters.csproj
@@ -139,6 +139,7 @@
     <Content Include="appointment_manage.aspx" />
     <Content Include="appointment_new.aspx" />
     <Content Include="article_details.aspx" />
+    <Content Include="article_new.aspx" />
     <Content Include="login.aspx" />
     <Content Include="map.aspx" />
     <Content Include="packages.config" />
@@ -190,6 +191,13 @@
     </Compile>
     <Compile Include="article_details.aspx.designer.cs">
       <DependentUpon>article_details.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="article_new.aspx.cs">
+      <DependentUpon>article_new.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="article_new.aspx.designer.cs">
+      <DependentUpon>article_new.aspx</DependentUpon>
     </Compile>
     <Compile Include="login.aspx.cs">
       <DependentUpon>login.aspx</DependentUpon>
