--- a/SourceCodes/VirusBusters/VirusBusters/bin/VirusBusters.dll.config
+++ b/SourceCodes/VirusBusters/VirusBusters/bin/VirusBusters.dll.config
@@ -22,6 +22,12 @@
     </compilers>
   </system.codedom>
   <system.webServer>
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="login.aspx"/>
+      </files>
+    </defaultDocument>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="ApplicationInsightsWebTracking" />
@@ -54,4 +60,8 @@
   <add name="myDB" connectionString="Server=tcp:virusbusters.database.windows.net,1433;Initial Catalog=VirusBustersDB;Persist Security Info=False;User ID=VBadmin;Password=Password1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" />
   <add name="VirusBustersDBConnectionString" connectionString="Data Source=virusbusters.database.windows.net;Initial Catalog=VirusBustersDB;Persist Security Info=True;User ID=VBadmin;Password=Password1"
     providerName="System.Data.SqlClient" />
-</connectionStrings></configuration>
+</connectionStrings>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
+</configuration>
