--- a/SourceCodes/VirusBusters/VirusBusters/bin/VirusBusters.dll.config
+++ b/SourceCodes/VirusBusters/VirusBusters/bin/VirusBusters.dll.config
@@ -25,7 +25,7 @@
     <defaultDocument>
       <files>
         <clear />
-        <add value="login.aspx"/>
+        <add value="articles.aspx"/>
       </files>
     </defaultDocument>
     <validation validateIntegratedModeConfiguration="false" />
