Added login restrictions & swapping of masterpages in multiple pages, error in asp:LoginView

--- a/SourceCodes/VirusBusters/VirusBusters/bin/VirusBusters.dll.config
+++ b/SourceCodes/VirusBusters/VirusBusters/bin/VirusBusters.dll.config
@@ -64,4 +64,11 @@
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
+  <sitecore>
+    <rendering>
+      <typesThatShouldNotBeExpanded>
+        <type>System.Web.UI.WebControls.LoginView</type>
+      </typesThatShouldNotBeExpanded>
+    </rendering>
+  </sitecore>
 </configuration>
