--- a/SourceCodes/VirusBusters/VirusBusters/Web.config
+++ b/SourceCodes/VirusBusters/VirusBusters/Web.config
@@ -14,6 +14,18 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <authentication mode="Forms">
+      <forms defaultUrl="~/articles.aspx" loginUrl="~/login.aspx" slidingExpiration="true" timeout="2880"></forms>
+    </authentication>
+    <!--USER MUST LOGIN TO ACCESS ALL PAGES
+    <authorization>
+      <deny users="?" /> 
+    </authorization>-->
+    <siteMap enabled ="true" defaultProvider="SiteMap">
+      <providers>
+        <add name="SiteMap" type="System.Web.XmlSiteMapProvider" siteMapFile="~/Web.sitemap" securityTrimmingEnabled="true" />
+      </providers>
+    </siteMap>
   </system.web>
   <system.codedom>
     <compilers>
