--- a/SourceCodes/VirusBusters/VirusBusters/bin/VirusBusters.dll.config
+++ b/SourceCodes/VirusBusters/VirusBusters/bin/VirusBusters.dll.config
@@ -14,6 +14,18 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <authentication mode="Forms">
+      <forms defaultUrl="~/articles.aspx" loginUrl="~/login.aspx" slidingExpiration="true" timeout="2880"></forms>
+    </authentication>
+    <!--USER MUST LOGIN TO ACCESS ALL PAGES
+    <authorization>
+      <deny users="?" /> 
+    </authorization>-->
+    <siteMap enabled ="true" defaultProvider="SiteMap">
+      <providers>
+        <add name="SiteMap" type="System.Web.XmlSiteMapProvider" siteMapFile="~/Web.sitemap" securityTrimmingEnabled="true" />
+      </providers>
+    </siteMap>
   </system.web>
   <system.codedom>
     <compilers>
@@ -64,11 +76,4 @@
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
-  <sitecore>
-    <rendering>
-      <typesThatShouldNotBeExpanded>
-        <type>System.Web.UI.WebControls.LoginView</type>
-      </typesThatShouldNotBeExpanded>
-    </rendering>
-  </sitecore>
 </configuration>
