added pie chart display for predictor
added new js file for ajax method in retrieving the information from the
c# to display it at the front end as a pie chart.

--- a/SourceCodes/VirusBusters/VirusBusters/VirusBusters.csproj
+++ b/SourceCodes/VirusBusters/VirusBusters/VirusBusters.csproj
@@ -159,6 +159,7 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="Scripts\custom.js" />
     <Content Include="Web.sitemap" />
   </ItemGroup>
   <ItemGroup>
@@ -292,7 +293,6 @@
     </Compile>
     <Compile Include="symptom_checker_result.aspx.cs">
       <DependentUpon>symptom_checker_result.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="symptom_checker_result.aspx.designer.cs">
       <DependentUpon>symptom_checker_result.aspx</DependentUpon>
